src/main/java/com/example/final_project/_core/errors/exception/Exception500.java
package com.example.final_project._core.errors.exception;

public class Exception500 extends RuntimeException {
    public Exception500(String message) {
        super(message);
    }
}